<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.coderextreme</groupId>
    <artifactId>abstractionmapper</artifactId>
    <version>1.0.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>

	    <artifactId>selenium-devtools-v131</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-os</artifactId>

            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-json</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-manager</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-http</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-api</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-chrome-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-chromium-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-edge-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-firefox-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-ie-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-remote-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-safari-driver</artifactId>
            <version>4.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-support</artifactId>
            <version>4.27.0</version>
        </dependency>
	<dependency>
	    <groupId>dev.failsafe</groupId>
	    <artifactId>failsafe</artifactId>
	    <version>3.3.2</version>
	    <scope>runtime</scope>
	</dependency>
	<dependency>
	    <groupId>com.formdev</groupId>
	    <artifactId>flatlaf</artifactId>
	    <version>3.5.1</version>
	</dependency>
    <!-- https://mvnrepository.com/artifact/io.github.electronstudio/jaylib-ffm -->
<dependency>
    <groupId>io.github.electronstudio</groupId>
    <artifactId>jaylib-ffm</artifactId>
    <version>5.5.0-0</version>
</dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>23</release>
		    <!--
		    <compilerArgument>-Xlint:unchecked</compilerArgument>
		    -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                    <mainClass>net.coderextreme.assets.Main</mainClass>
			<!--
                    <mainClass>org.openjfx.App</mainClass>
                    <mainClass>net.coderextreme.main.App</mainClass>
		    <commandlineArgs>src/main/resources/net/coderextreme/motion/contact.data target/classes/net/coderextreme/motion/gedda/</commandlineArgs>
			-->
                </configuration>
            </plugin>
	    <!-- Doesn't work -->
	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-jar-plugin</artifactId>
		<version>2.4</version>
		<configuration>
		  <archive>
		    <manifest>
		      <addClasspath>true</addClasspath>
		      <!--
		      <mainClass>org.openjfx.App</mainClass>
		      -->
                      <mainClass>net.coderextreme.main.App</mainClass>
		    </manifest>
		  </archive>
		</configuration>
          </plugin>
        </plugins>
    </build>
</project>
